--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,7 @@
 
   <section id="content">
     <router-outlet></router-outlet>
-
-
-
-
   </section>
-
-
 
 </body>
 
@@ -41,7 +35,7 @@
     </div>
 
     <div id="" class="col-3" >
-      <a  id="" title="Los Tejos" href="https://wa.link/ye1oaq"><img src="../assets/img/icono-wp.png" alt="WP" /></a>
+      <a  id="" title="Los Tejos" href="https://wa.link/ye1oaq" target="_blank"><img src="../assets/img/icono-wp.png" alt="WP" /></a>
     </div>
 
   </div>
