--- a/src/app/componentes/favoritos/favoritos.component.html
+++ b/src/app/componentes/favoritos/favoritos.component.html
@@ -1,3 +1,13 @@
-<p>
- HHSDHSH
-</p>
+<div class="row justify-content-center"  style="margin-top: -118px; margin-bottom: -36px;">
+    <!-- Logo-->
+    <img  style="width: 304px; height: 243px;"  src="../../../assets/img/LOGO/LOGO.png" alt="Imagen logo">
+  </div>
+
+
+  <div class="col-5" style="margin-left: 328px; margin-bottom: 20px;">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+    </form>
+  </div>
+
+  <h2 style="text-align: center; margin-top: 50px;"> !HASTA EL MOMENTO NO HAS AGREGADO FAVORITOS! <br> :(</h2>
