--- a/src/app/componentes/novedades/novedades.component.html
+++ b/src/app/componentes/novedades/novedades.component.html
@@ -1,116 +1,76 @@
-<div class="container">
-  <div class="row justify-content-center"  style="margin-top: -118px; margin-bottom: -36px;">
-    <!-- Logo-->
-    <img  style="width: 304px; height: 243px;"  src="../../../assets/img/LOGO/LOGO.png" alt="Imagen logo">
-  </div>
+<div class="row justify-content-center" style="margin-top: -118px; margin-bottom: -36px;">
+  <!-- Logo-->
+  <img style="width: 304px; height: 243px;" src="../../../assets/img/LOGO/LOGO.png" alt="Imagen logo">
+</div>
 
-  <div class="col-5" style="margin-left: 328px; margin-bottom: 20px;">
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-    </form>
-  </div>
-
-  <div style="text-align: center; margin-top: 42px; margin-bottom: 22px;">
-    <h1>NOVEDADES</h1>
-  </div>
+<div class="col-5" style="margin-left: 328px; margin-bottom: 20px;">
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+  </form>
+</div>
 
 
-  <div class="container" style="padding-left: 170px;">
 
-    <h2>NUEVA COLECCIÓN</h2>
 
-    <div class="row">
-      <div class="col-3 ">
-        <img src="../../../assets/img/img-prueba/imgprod1.png" alt="Imagen1">
-        <div style="margin-top: 6px">
-          <div class="" id="smas" style="">
-            <a [routerLink]="['/sabermas']" style="color: black;">Saber mas</a>
+<div style="text-align: center; margin-top: 42px; margin-bottom: 22px;">
+  <h1>NOVEDADES</h1>
+</div>
+
+
+<div class="container" style="padding-left: 170px;">
+
+  <h2>NUEVA COLECCIÓN</h2>
+
+
+  <div class="row">
+    <div class="col-3">
+      <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
+      </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
           </div>
-          <button class='btn btn-lg' id="estrella" style=' '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
-      </div>
-
-      <div class="col-3 " style="">
-        <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
-        <div class=" " id="smas" style=" ">
-          <a href="#" style="color: black;">Saber mas</a>
-        </div>
-        <div class="" id="smas">
-          <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
-        <div class=" " id="smas" style=" ">
-          <a href="#" style="color: black;">Saber mas</a>
-        </div>
-        <div class="" id="smas">
-          <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+        </button>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-3 border">
-        <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
-        <div class=" " id="smas" style=" ">
-          <a href="#" style="color: black;">Saber mas</a>
-        </div>
-        <div class="" id="smas">
-          <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+    <div class="col-3" style="margin-left: 50px; margin-right: 50px;">
+      <img src="../../../assets/img/img-prueba/imgprod5.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
       </div>
-
-      <div class="col-3 border" style="margin-left: 20px; margin-right: 20px;">
-        <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
-        <div class=" " id="smas" style=" ">
-          <a href="#" style="color: black;">Saber mas</a>
-        </div>
-        <div class="" id="smas">
-          <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
-      </div>
-
-      <div class="col-3 border">
-        <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
-        <div class=" " id="smas" style=" ">
-          <a href="#" style="color: black;">Saber mas</a>
-        </div>
-        <div class="" id="smas">
-          <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          </div>
+        </button>
       </div>
     </div>
 
-
+    <div class="col-3">
+      <img src="../../../assets/img/img-prueba/imgprod6.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
+      </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          </div>
+        </button>
+      </div>
+    </div>
   </div>
-  <div style="text-align: center; margin-top: 25px;">
 
+
+</div>
+<div style="text-align: center; margin-top: 25px;">
+
+  <a href="https://wa.link/ye1oaq" target="_blank">
     <button type="button" class="btn btn-primary">SABER MÁS</button>
-
-  </div>
+  </a>
+</div>
