--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,9 +46,10 @@
 }
 
 body {
+  border: solid;
   font-family: "BebasNeue bold", arial, helvetica;
   font-size: 20px;
-  background: url("../assets/img/LOGO/A&V\ SportsWear_orange.png");
+  //background: url("../assets/img/LOGO/A&V\ SportsWear_orange.png");
   background-attachment: fixed;
 }
 
