--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -14,33 +14,28 @@
   </div>
 
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-
+  <div style="margin-bottom: 50px;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active" style="">
-        <img src="../../../assets/img/image_2021_09_03T23_32_48_382Z.png" class="d-block w-100" alt="...">
+      <div class="carousel-item active">
+        <img style="width: 200px; height: 500px;" src="../../../assets/img/image_2021_09_03T23_32_48_382Z.png" class="d-block w-100" alt="...">
       </div>
-
+      <div class="carousel-item">
+        <img style="width: 200px; height: 500px;" src="../../../assets/img/img-carusel.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img style="width: 200px; height: 500px;" src="../../../assets/img/imgcar2.jpeg" class="d-block w-100" alt="...">
+      </div>
     </div>
-
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
 
-
-
-<!--Carrusel-->
 
 
 
@@ -49,46 +44,45 @@
 <div class="container" style="padding-left: 170px;">
   <h2>Lo mas vendido</h2>
   <div class="row">
-    <div class="col-3 border">
-
-      <div class="row border">
-        <img id="mas" src="../../../assets/img/img-prueba/imgprod1.png" alt="Imagen1">
-        <div class="col-8 border">saber mas</div>
-        <div class="col-4">
-          <button class='btn btn-lg ' style='background-color:transparent;'>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+    <div class="col-3">
+      <img src="../../../assets/img/img-prueba/imgprod4.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
+      </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          </div>
+        </button>
       </div>
     </div>
 
-    <div class="col-3 border" style="margin-left: 20px; margin-right: 20px;">
-      <div class="row border">
-        <img id="mas" src="../../../assets/img/img-prueba/imgprod2.png" alt="Imagen2">
-        <div class="col-8 border">saber mas</div>
-        <div class="col-4">
-          <button class='btn btn-lg ' style='background-color:transparent;'>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+    <div class="col-3" style="margin-left: 50px; margin-right: 50px;">
+      <img src="../../../assets/img/img-prueba/imgprod2.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
+      </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          </div>
+        </button>
       </div>
     </div>
 
-    <div class="col-3 border">
-      <div class="row border">
-        <img style="width: 212px; height: 257px;" src="../../../assets/img/img-prueba/imgprod3.png" alt="Imagen3">
-        <div class="col-8 border">saber mas</div>
-        <div class="col-4">
-          <button class='btn btn-lg ' style='background-color:transparent;'>
-            <div style='text-align:center;'>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </div>
-          </button>
-        </div>
+    <div class="col-3">
+      <img src="../../../assets/img/img-prueba/imgprod3.png" alt="Imagen1">
+      <div class=" " id="smas" style=" ">
+        <a href="#" style="color: black;">Saber mas</a>
+      </div>
+      <div class="" id="smas">
+        <button class='btn btn-lg ' id="estrella" style='background-color:transparent; '>
+          <div style='text-align:center;'>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          </div>
+        </button>
       </div>
     </div>
   </div>
