--- a/src/app/componentes/inicio/inicio.component.scss
+++ b/src/app/componentes/inicio/inicio.component.scss
@@ -4,4 +4,18 @@
   height: 200px;
 }
 
+img{
+  width: 249px;
+  height: 200px;
+ }
+ #smas{
+   float: left;
+    padding-left: 11px;
+     font-size: 31px;
+ }
 
+ #estrella{
+   background-color:transparent;
+   margin-left: 178px;
+    margin-top: -74px;
+ }
